# sessionless

./: .README-DEV.md.swp  .README.md.swp  .gitignore  README-DEV.md  README-UX.md  README.md  Sessionless Product Detail.md  test.sh
assets/: logo.png.REMOVED.git-id
docs/: .Web-3.md.swp  Authentication and Identity.md  Authentication-and-identity.md  CONTRIBUTING  Cryptography.md  How does this work.md  How-does-this-work.md  Is Sessionless Secure.md  Is-Sessionless-secure.md  Primary and Secondary.md  Primary-and-secondary.md  Web 3.md  Web 5.md  Web-3.md  Web5.md
src/cpp/: README.md
src/cpp/client/: .gitignore  CMakeLists.txt  README.md
src/cpp/client/example/: CMakeLists.txt  README.md  main.cpp
src/cpp/client/example/arduino/: LEDTEST.ino  sessionless.cpp  sessionless.h
src/cpp/client/example/arduino/LEDTEST/: LEDTEST.ino  hash_types.hpp  keccak.c  keccak.h  sessionless.cpp  sessionless.h
src/cpp/client/lib/: CMakeLists.txt  README.md
src/cpp/client/lib/src/: sessionless.cpp  sessionless.hpp
src/cpp/client/mac/: CMakeCache.txt  CMakeLists.txt  Sessionless  cmake_install.cmake  libsecp256k1.2.dylib  libsecp256k1.dylib.REMOVED.git-id  main.cpp  makefile  secp256k1.c.o.REMOVED.git-id  sessionless-string.cpp  sessionless-string.hpp  sessionless.cpp  sessionless.hpp
src/cpp/client/src/: main.cpp  sessionless.hpp
src/csharp/: README.md
src/csharp/Sessionless/: README.md  Sessionless.sln  SessionlessNET.csproj
src/csharp/Sessionless/Impl/: KeyPair.cs  KeyPairHex.cs  MessageSignature.cs  Sessionless.cs  SignedMessage.cs  Vault.cs
src/csharp/Sessionless/Impl/Exceptions/: HexFormatRequiredException.cs  KeyPairNotFoundException.cs
src/csharp/Sessionless/Models/: IKeyPair.cs  IMessageSignature.cs  ISessionless.cs  ISignedMessage.cs  IVault.cs
src/csharp/Sessionless/Util/: KeyUtils.cs  MathUtils.cs
src/csharp/SessionlessTest/: .gitignore  GeneralTests.cs  IntegrityTests.cs  SessionlessGeneralTests.cs  SessionlessTest.csproj
src/csharp/SessionlessTest/Samples/: VaultSample.cs
src/csharp/examples/server/: Program.cs  Startup.cs  appsettings.json  server.csproj  server.sln  users.json
src/csharp/examples/server/Components/: App.razor  _Imports.razor
src/csharp/examples/unity/: README.md
src/gml/: README.md
src/gml/lib-rust/: Cargo.toml
src/gml/lib-rust/src/: lib.rs  state.rs
src/gml/project/: README.md  Sessionless.yyp
src/java/MyApplication/app/: build.gradle
src/java/server/sessionless/: build.gradle  pom.xml  sessionless.ipr  settings.gradle
src/java/spring/: Dockerfile  LICENSE.txt  README.md  build.gradle  docker-compose.yml  settings.gradle
src/java/spring/env/: .env_api  .env_db
src/java/spring/initial/: build.gradle
src/javascript/: README.md
src/javascript/example/: test.js
src/javascript/example/cli/: .main.js.swp  README.md  main.js  package-lock.json  package.json
src/javascript/example/client-expo/: App.js  README.md  app.json  package-lock.json  package.json
src/javascript/example/koa/: README.md  app.js  package-lock.json  package.json
src/javascript/example/nestjs/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  users.json
src/javascript/example/server/: README.md  package-lock.json  package.json  server.js  users.json
src/javascript/example/server-deno/: README.md  deno.json  dump.rdb  main.ts  main_test.ts
src/javascript/example/web/: index.html  index.js
src/javascript/expo/: index.js  package-lock.json  package.json  sessionless.js
src/javascript/node/: README.md  package-lock.json  package.json  sessionless.cjs  sessionless.d.ts  sessionless.js  test.js
src/javascript/node/test/: sessionless.js
src/kotlin/: README.md  build.gradle.kts
src/kotlin/example/spring/: .gitignore  build.gradle.kts  settings.gradle.kts
src/kotlin/standalone/sessionless/: .gitignore  build.gradle.kts
src/python/: .gitignore  README.md  requirements.txt  setup.py
src/python/examples/cli/: hello_world.py  main.py
src/python/package/: README.md  requirements.txt  setup.py
src/python/package/sessionless/: __init__.py  modelsecp256k1.py
src/python/package/test/: __init__.py  test_modelsecp256k1.py
src/python/package/tests/: __init__.py  modelsecp256k1__test.py  test.modelsecp256k1.py
src/python/sessionless/: __init__.py  core.py  modelsecp.py  modelsecp256k1.py  secp256k1.py  sessionless.core.py  sessionless.secp256k1.py
src/python/tests/: sessionless.secp256k1.test.py
src/rust/: README.md
src/rust/crate/: Cargo.toml  README.md
src/rust/crate/src/: lib.rs  tests.rs
src/rust/crate/src/hex/: error.rs  impls.rs  mod.rs
src/rust/examples/slapper/: .gitignore  Cargo.toml
src/rust/examples/slapper/src/: commands.rs  main.rs  requests.rs
src/rust/examples/slapper/src/commands/: color_test.rs  lots.rs  mod.rs
src/rust/examples/slapper/src/requests/: do_cool_stuff.rs  mod.rs  register.rs  server_config.rs
src/rust/examples/slapper/src/utils/: color.rs  mod.rs  placement.rs
src/rust/examples/web-client/: .gitignore  Cargo.toml  README.md
src/rust/examples/web-client/src/: lib.rs  utils.rs
src/rust/examples/web-server/: .gitignore  Cargo.toml  README.md  vercel.json
src/rust/examples/web-server/frontend/libs/: web_client.js  web_client_bg.wasm
src/rust/examples/web-server/frontend/pages/: client.html
src/rust/examples/web-server/src/: database.rs  main.rs
src/rust/examples/web-server/src/handler/: api.rs  mod.rs  resources.rs
src/rust/examples/web-server/src/handler/api/: associate.rs  cool_stuff.rs  mod.rs  register.rs  value.rs
src/rust/examples/web-server/src/request/: mod.rs  objects.rs
src/rust/examples/web-server/src/response/: builder.rs  mod.rs  objects.rs
src/swift/: README.md
src/swift/client-ios/: index.js  package-lock.json  package.json
src/swift/client-ios/Sessionless/: .travis.yml  LICENSE  README.md  Sessionless.podspec  Sessionless.swift  crypto.js
src/swift/example/: README.md
src/swift/example/BlueExample/: .Podfile.swp
src/swift/example/GreenExample/: Podfile
src/swift/example/SessionlessExample/: Podfile
(+271 files in other folders)
