[package]
name = "slapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.async-std]
# version = "1.6"
# features = ["attributes"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
sessionless = "0.1.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
log = "0.4"
simple_logger = "5.0"
anyhow = "1.0"
