[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
erased-serde = "0.4"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sessionless]
path = "../../crate"
features = ["uuid"]
