[package]
name = "web-server"
version = "0.2.1"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
erased-serde = "0.4"
lazy_static = "1.4.0"
simple-base64 = "0.23"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
indexmap = "2.2"
url = "2.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sessionless]
version = "0.1"
features = ["uuid"]
